# Mining_controller

./: README.md
Mining_controller_ws/devel/: .catkin  local_setup.sh  setup.sh
Mining_controller_ws/devel/lib/articulation_stanley_controller/: stanley_controller_node
Mining_controller_ws/devel/lib/pkgconfig/: articulation_stanley_controller.pc
Mining_controller_ws/devel/share/articulation_stanley_controller/cmake/: articulation_stanley_controllerConfig.cmake
Mining_controller_ws/src/articulation_stanley_controller/: CMakeLists.txt
Mining_controller_ws/src/articulation_stanley_controller/data/: oval_path.csv  square_path_0_1_gap.csv
Mining_controller_ws/src/articulation_stanley_controller/include/articulation_stanley_controller/: stanley_controller.h
Mining_controller_ws/src/articulation_stanley_controller/src/: stanley_controller.cpp  stanley_controller_node.cpp
pure_pursuit_ws/devel/: .catkin  local_setup.sh
pure_pursuit_ws/devel/lib/pkgconfig/: pure_pursuit_controller.pc
pure_pursuit_ws/devel/lib/pure_pursuit_controller/: pure_pursuit_controller_node
pure_pursuit_ws/devel/share/pure_pursuit_controller/cmake/: pure_pursuit_controllerConfig.cmake
pure_pursuit_ws/src/pure_pursuit_controller/: CMakeLists.txt
pure_pursuit_ws/src/pure_pursuit_controller/data/: infinity_path.csv
pure_pursuit_ws/src/pure_pursuit_controller/include/pure_pursuit_controller/: pure_pursuit_controller.h
pure_pursuit_ws/src/pure_pursuit_controller/src/: pure_pursuit_controller.cpp  pure_pursuit_controller_node.cpp
